--- a/index.html
+++ b/index.html
@@ -2,4 +2,6 @@
   title: My home page
   layout: default
 ---
-<h1>Hello jekyll</h1>
+<h1>gawasoft</h1>
+{% include nav.html %}
+{% include footer.html %}
