improve the home page

--- a/index.html
+++ b/index.html
@@ -2,6 +2,33 @@
   title: My home page
   layout: default
 ---
-<h1>gawasoft</h1>
+
 {% include nav.html %}
+  <section id="showcase">
+    <div class="container">
+      <h1>Let’s make your product and team</h1>
+        <p>thoughtbot is your expert design and development partner. We bring digital products from validation to success and teach
+        you how because we care. It’s time to move beyond simply building features and start designing the right product with
+        the right&nbsp;strategy.</p>
+        <button class="button">let's talk</button>
+    </div>
+  </section>
+
+  <div class="container">
+    <section id="main">
+      <small>OUR SERVICES</small>
+      <h1>Your expert partners for building mission-driven products</h1>
+      <p>Benefit from over 17 years of experience designing and building successful products. Whether you're a founder with a new
+      idea, a product owner at a large enterprise, or somewhere in between, thoughtbot can help you solve meaningful problems
+      with a design-led approach. Work with a small, dedicated team of project-focused product experts built to fit the needs
+      of your project.
+      </p>
+      <a href="{{ site.baseurl }}">Learn more</a>
+    </section>
+    <aside id="sidebar">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud </p>
+    </aside>
+  </div>
 {% include footer.html %}
